[gd_scene load_steps=22 format=2]

[ext_resource path="res://map/textures/objects/house/medium_house.png" type="Texture" id=1]
[ext_resource path="res://map/scenes/decorations/house.gd" type="Script" id=2]
[ext_resource path="res://map/textures/objects/house/windmill_house.png" type="Texture" id=3]
[ext_resource path="res://ui/textures/icons/pointer-top-arrow_green.png" type="Texture" id=4]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/textures/buttons/btn_no.png" type="Texture" id=6]
[ext_resource path="res://areas/detect_right_click_area.gd" type="Script" id=8]
[ext_resource path="res://efx/resources/spotlight_1.png" type="Texture" id=9]
[ext_resource path="res://map/textures/background/bg.png" type="Texture" id=10]
[ext_resource path="res://efx/shader/scripts/fire.shader" type="Shader" id=12]

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 12 )
shader_param/transparent = Color( 0.584314, 0, 0, 0 )
shader_param/inner = Color( 1, 0.784314, 0, 0.941176 )
shader_param/outer = Color( 1, 0.568627, 0.176471, 0.901961 )
shader_param/inner_threshold = 0.6
shader_param/outer_threshold = 0.25
shader_param/soft_edge = 0.2
shader_param/center = Vector2( 0.5, 0.8 )
shader_param/OCTAVES = 6

[sub_resource type="CanvasItemMaterial" id=14]
blend_mode = 1

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 176, 140 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "house_pointer"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 52, 23 ), Vector2( 52.1667, 28.8333 ), Vector2( 52.3333, 34.6667 ), Vector2( 52.5, 40.5 ), Vector2( 52.6667, 46.3333 ), Vector2( 52.8333, 52.1667 ), Vector2( 53, 58 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "medium_house_pointer"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 155, 90 ), Vector2( 155, 95.8333 ), Vector2( 155, 101.667 ), Vector2( 155, 107.5 ), Vector2( 155, 113.333 ), Vector2( 155, 119.167 ), Vector2( 155, 125 ) ]
}

[sub_resource type="CanvasItemMaterial" id=11]
blend_mode = 1

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=1]
resource_name = "windmill"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=7]
length = 0.001

[sub_resource type="Animation" id=6]
resource_name = "button_fade"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 1 ) ]
}

[node name="House" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D_House" type="Area2D" parent="Sprite"]
position = Vector2( 0, 54 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_House"]
polygon = PoolVector2Array( -83, 18, -73, -21, -102, -36, -58, -143, -59, -169, -37, -179, 78, -143, 86, -118, 104, -46, 105, -5, 116, 18, 15, 66 )

[node name="Area2D_Farm_House" type="Area2D" parent="Sprite"]
position = Vector2( -10, 83 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_Farm_House"]
position = Vector2( -15, -5 )
polygon = PoolVector2Array( 4, 45, -80, 3, -85, -40, -87, -56, -100, -66, -98, -80, -77, -134, -44, -187, -43, -203, -18, -215, 82, -167, 115, -157, 134, -127, 157, -94, 161, -73, 155, -43, 155, 1, 40, 56 )

[node name="Area2D_Medium_House" type="Area2D" parent="Sprite"]
position = Vector2( -45, 86 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_Medium_House"]
polygon = PoolVector2Array( -191, 86, -190, -11, -120, -52, -134, -144, -78, -227, -26, -272, 14, -292, 101, -326, 137, -321, 159, -300, 170, -250, 196, -196, 212, -176, 246, -117, 300, 57, 55, 191 )

[node name="FIreShader" type="Sprite" parent="Sprite/Area2D_Medium_House"]
modulate = Color( 1, 1, 1, 0.784314 )
material = SubResource( 13 )
position = Vector2( 16, -302 )
scale = Vector2( 0.275, 0.4 )
texture = ExtResource( 10 )

[node name="YellowLight" type="Sprite" parent="Sprite/Area2D_Medium_House/FIreShader"]
modulate = Color( 0.745098, 0.533333, 0.12549, 0.705882 )
material = SubResource( 14 )
position = Vector2( 0, 72.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Area2D_Green_House" type="Area2D" parent="Sprite"]
position = Vector2( 10, 24 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_Green_House"]
polygon = PoolVector2Array( 0, 78, -109, 24, -110, -47, -68, -133, -57, -138, 52, -85, 93, -40, 100, 26 )

[node name="Area2D_Storage_House" type="Area2D" parent="Sprite"]
position = Vector2( 21, 55 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_Storage_House"]
polygon = PoolVector2Array( -42, 69, 81, 10, 81, -59, 65, -158, 39, -176, 14, -179, -103, -119, -129, -30, -119, 42, -53, 70 )

[node name="Area2D_Dock_House" type="Area2D" parent="Sprite"]
position = Vector2( 1, 25 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D_Dock_House"]
polygon = PoolVector2Array( -16, 50, -83, 19, -84, -60, -38, -105, -29, -109, 69, -62, 68, -25, 86, -15, 86, 7, -1, 59 )

[node name="Pointer" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 176, 140 )
scale = Vector2( 0.65, 0.85 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite/Pointer"]
anims/RESET = SubResource( 9 )
anims/house_pointer = SubResource( 8 )
anims/medium_house_pointer = SubResource( 10 )

[node name="Light" type="Sprite" parent="Sprite/Pointer"]
modulate = Color( 0.745098, 0.533333, 0.12549, 0.627451 )
material = SubResource( 11 )
position = Vector2( -3.05176e-05, -2.38986 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="AnimateSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 9
frame = 1

[node name="Area2D_WindMill_House" type="Area2D" parent="AnimateSprite"]
position = Vector2( -9, 112 )
collision_mask = 3
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AnimateSprite/Area2D_WindMill_House"]
polygon = PoolVector2Array( -84, 13, 137, 14, 132, -51, 125, -67, 108, -95, 102, -198, 106, -218, 114, -224, 115, -255, 68, -278, 25, -257, -29, -236, -73, -240, -138, -195, -138, -163, -94, -120, -90, -35 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimateSprite"]
anims/RESET = SubResource( 2 )
anims/windmill = SubResource( 1 )

[node name="FIreShader" type="Sprite" parent="AnimateSprite"]
modulate = Color( 1, 1, 1, 0.784314 )
material = SubResource( 13 )
position = Vector2( 61, -180 )
scale = Vector2( 0.275, 0.4 )
texture = ExtResource( 10 )

[node name="YellowLight" type="Sprite" parent="AnimateSprite/FIreShader"]
modulate = Color( 0.745098, 0.533333, 0.12549, 0.705882 )
material = SubResource( 14 )
position = Vector2( 0, 72.5 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="GroupButtonRemove" type="Node2D" parent="."]
z_index = 10

[node name="ButtonRemove" type="TextureButton" parent="GroupButtonRemove"]
visible = false
margin_left = -28.0
margin_top = -17.0
margin_right = 36.0
margin_bottom = 15.0
rect_scale = Vector2( 0.85, 0.85 )
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GroupButtonRemove/ButtonRemove"]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
text = "Remove"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GroupButtonRemove/ButtonRemove"]
autoplay = "button_fade"
anims/RESET = SubResource( 7 )
anims/button_fade = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Sprite/Area2D_House" to="." method="_on_Area2D_House_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_House" to="." method="_on_Area2D_House_body_exited"]
[connection signal="body_entered" from="Sprite/Area2D_Farm_House" to="." method="_on_Area2D_Farm_House_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_Farm_House" to="." method="_on_Area2D_Farm_House_body_exited"]
[connection signal="body_entered" from="Sprite/Area2D_Medium_House" to="." method="_on_Area2D_Medium_House_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_Medium_House" to="." method="_on_Area2D_Medium_House_body_exited"]
[connection signal="body_entered" from="Sprite/Area2D_Green_House" to="." method="_on_Area2D_Green_House_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_Green_House" to="." method="_on_Area2D_Green_House_body_exited"]
[connection signal="body_entered" from="Sprite/Area2D_Storage_House" to="." method="_on_Area2D_Storage_House_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_Storage_House" to="." method="_on_Area2D_Storage_House_body_exited"]
[connection signal="body_entered" from="Sprite/Area2D_Dock_House" to="." method="_on_Area2D_Dock_House_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D_Dock_House" to="." method="_on_Area2D_Dock_House_body_exited"]
[connection signal="body_entered" from="AnimateSprite/Area2D_WindMill_House" to="." method="_on_Area2D_WindMill_House_body_entered"]
[connection signal="body_exited" from="AnimateSprite/Area2D_WindMill_House" to="." method="_on_Area2D_WindMill_House_body_exited"]
